extended CombineVariants step of workflow by adding new features from pipeline-util